--- a/src/index.css
+++ b/src/index.css
@@ -128,6 +128,8 @@ img{
   align-items: center;
   font-weight: var(--font-semi);
 }
+
+
 @media screen and (max-width: 768px){
   .nav__menu{
     position: fixed;
@@ -161,6 +163,7 @@ img{
 }
 .nav__logo{
   color: var(--second-color);
+  font-size: 24px;
 }
 .nav__toggle{
   color: var(--second-color);
@@ -246,7 +249,7 @@ img{
 .about__container{
   row-gap: 2rem;
   text-align: center;
-  margin-bottom: 230px;
+  margin-bottom: 220px;
 }
 .about__subtitle{
   margin-bottom: var(--mb-2);
@@ -327,27 +330,17 @@ img{
   row-gap: 2rem;
 }
 
-.work__rep>div{
-
-  transition: 1s;
-}
-
-.work__rep>div:hover{
-  transform: scale(1.1);
-}
 .work__rep{
-  
+  box-shadow: 8px 4px 25px rgba(14,36,49,.15);
   border-radius: .5rem;
 
 }
-
 .work__rep a{
   display:block;
   
   cursor: pointer;
   color: var(--second-color);
 }
-
 
 .work__rep div>div{
   width: 100%;
@@ -357,30 +350,23 @@ img{
 }
 
 .work__rep p,h3{
+  margin-top: 0px;
   text-overflow: ellipsis;
   padding-right: 5px;
   padding-left: 5px;
 }
 
-.work__rep span{
-  display:inline-block;
-  margin-top:30px;
+.more a{
+  color: var(--second-color);
+  font-size:120px ;
 }
-.work__rep #more{
-  font-size: 128px;
-  float:right;
+.more h3{
+text-align: center;
+padding-top: 50px;
 }
-/* ===== CONTACT =====*/
-.contact__input{
-  width: 100%;
-  font-size: var(--normal-font-size);
-  font-weight: var(--font-semi);
-  padding: 1rem;
-  border-radius: .5rem;
-  border: 1.5px solid var(--second-color);
-  outline: none;
-  margin-bottom: var(--mb-4);
-}
+
+/* ===== DOWNLOAD =====*/
+
 .download__button{
   display: block;
   border: none;
