--- a/src/index.css
+++ b/src/index.css
@@ -268,7 +268,7 @@ img{
   text-align: center;
 }
 .skills__subtitle{
-  margin-bottom: var(--mb-2);
+  margin-bottom:60px;
 }
 .skills__text{
   margin-bottom: var(--mb-4);
@@ -306,7 +306,7 @@ img{
   width: 90%;
 }
 .skills__aws{
-  width: 50%;
+  width: 25%;
 }
 .skills__git{
   width: 85%;
@@ -325,6 +325,9 @@ img{
 }
 .skills__img{
   border-radius: .5rem;
+}
+.skills__api{
+  width:75%;
 }
 
 /* ===== WORK =====*/
@@ -414,6 +417,13 @@ section.contact{
   margin-bottom: 250px;
 }
 
+.licensetext{
+  color:var(--first-color);
+}
+.license img{
+  margin:0 auto;
+  display:block;
+}
 /* ===== MEDIA QUERIES=====*/
 @media screen and (min-width: 768px){
   body{
